# IBGEExplorer

./: .pre-commit-config.yaml  pyproject.toml  pytest.ini  settings.json
docs/: structure.txt
src/ibgeexplorer/: main.py
src/ibgeexplorer/domain/models/: __init__.py  agregado.py  categoria.py  classificacao.py  pesquisa.py  variavel.py
src/ibgeexplorer/domain/models/config/: __init__.py  config.py
src/ibgeexplorer/infrastructure/logging/: __init__.py  logger.py
src/ibgeexplorer/infrastructure/serialization/: json_agregado.py  json_pesquisa.py  json_producao.py
src/ibgeexplorer/utils/: settings.py
tests/: test_logwriter.py  test_settings.py
