[project]
name = "ibgeexplorer"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergio Pereira Junior",email = "pereisergio@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "ibgeexplorer", from = "src"}]


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
execute = "ibgeexplorer.main:main"

[tool.black]
line-length = 88
skip-string-normalization = false

[tool.isort]
profile = "black"
